# OctagonTennisCourtBooking

./: .env.example  .gitignore  README.md  package-lock.json  package.json
cpp/: CMakeLists.txt  main.cpp
scripts/: check_octagon_logs.sh  health_octagon_booker.sh  install_cpp_launchd.sh  run_cpp_booker.sh
src/: api.js  auth.js  book.js  config.js  date-planner.js  login.js  notify.js
